--- a/src/sass/Table.sass
+++ b/src/sass/Table.sass
@@ -1,13 +1,16 @@
 thead
 	caption
+		font-family: 'Roboto', sans-serif;
 		margin-top: 10px
 		margin-bottom: 10px
 		margin-left: 50%
 		margin-right: 50%
+		font-size: 30px
+		color: grey
 
 table
 	align-self: center
-	border: solid
+	border: solid grey
 	margin: auto
 
 td
@@ -26,3 +29,14 @@ td
 
 tr:nth-child(even)
 	background: #CCC
+
+img
+	width: 50px
+	height: 50px
+	margin-right: 10px
+	border-radius: 10px
+a 
+	color: #337ab7
+
+body
+	background: linear-gradient(141deg,rgba(228, 220, 179, 0.41),rgba(30, 86, 187, 0.24))
